--- a/src/input.css
+++ b/src/input.css
@@ -11,18 +11,16 @@
     rgba(0, 117, 255, 1) 100%
   );
 }
-input{
-    color: #555;
-    background: #ebfffc;
+input {
+  color: #555;
+  background: #ebfffc;
 }
-input::placeholder{
+input::placeholder {
   font-size: 15px;
 }
-.weather{
+.weather {
   transition: all 0.5s;
 }
-
-
 
 .spinner-container {
   margin-top: 50px;
@@ -42,7 +40,57 @@ input::placeholder{
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
+span {
+  background-image: linear-gradient(
+    90deg,
+    rgba(27, 27, 27, 1) 0%,
+    rgba(0, 189, 255, 1) 0%,
+    rgba(0, 227, 228, 1) 48%,
+    rgba(0, 117, 255, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.Name {
+  animation-name: Slide;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+@keyframes Slide {
+  0% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  30% {
+    text-shadow: 0 0 1em hsla(207, 100%, 50%, 0.436),
+      0 0 0.125em hsla(213, 100%, 50%, 0.5),
+      -0.5em -0.125em 0.25em hsla(217, 100%, 25%, 0.2),
+      0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  40% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  70% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  100% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+}
