--- a/src/output.css
+++ b/src/output.css
@@ -558,16 +558,16 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
 
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .mt-4 {
@@ -594,8 +594,8 @@ video {
   height: 4rem;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.min-h-1 {
+  min-height: 66vh;
 }
 
 .w-12 {
@@ -715,6 +715,11 @@ video {
   line-height: 1;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -753,20 +758,20 @@ video {
   );
 }
 
-input{
+input {
   color: #555;
   background: #ebfffc;
 }
 
-input::-moz-placeholder{
+input::-moz-placeholder {
   font-size: 15px;
 }
 
-input::placeholder{
+input::placeholder {
   font-size: 15px;
 }
 
-.weather{
+.weather {
   transition: all 0.5s;
 }
 
@@ -802,6 +807,54 @@ input::placeholder{
   }
 }
 
+span {
+  background-image: linear-gradient(
+    90deg,
+    rgba(27, 27, 27, 1) 0%,
+    rgba(0, 189, 255, 1) 0%,
+    rgba(0, 227, 228, 1) 48%,
+    rgba(0, 117, 255, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.Name {
+  animation-name: Slide;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+@keyframes Slide {
+  0% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  30% {
+    text-shadow: 0 0 1em hsla(207, 100%, 50%, 0.436),
+      0 0 0.125em hsla(213, 100%, 50%, 0.5),
+      -0.5em -0.125em 0.25em hsla(217, 100%, 25%, 0.2),
+      0.5em 0.125em 0.25em hsla(200, 100%, 60%, 0.4);
+  }
+
+  40% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  70% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+
+  100% {
+    text-shadow: rgba(27, 27, 27, 1) 0%, rgba(0, 189, 255, 1) 0%,
+      rgba(0, 227, 228, 1) 48%, rgba(0, 117, 255, 1);
+  }
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -814,18 +867,6 @@ input::placeholder{
 
   .xs\:w-11\/12 {
     width: 91.666667%;
-  }
-
-  .xs\:w-10 {
-    width: 2.5rem;
-  }
-
-  .xs\:w-16 {
-    width: 4rem;
-  }
-
-  .xs\:w-20 {
-    width: 5rem;
   }
 
   .xs\:w-28 {
@@ -842,9 +883,15 @@ input::placeholder{
   }
 }
 
+@media (min-width: 640px) {
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:mb-0 {
     margin-bottom: 0px;
   }
 }
-
